--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,106 +12,88 @@ endif()
 
 fips_begin_lib(RenderGraphic)
 	fips_vs_disable_warnings(4312)
-	fips_dir(RenderCore)
+	#fips_dir(RenderCore)
 	fips_files(
-		plugins                            
-		AABB.cpp                           
-		AABB.hpp                           
-		Buffer.hpp                         
-		BufferedStream.hpp                 
-		CatmullRomInterpolator.hpp         
-		checks.hpp                         
-		Collection.hpp                     
-		Colors.hpp                         
-		config.hpp.in    
-		config.hpp                  
-		CRC32CheckSum.hpp                  
-		DiskDirectory.cpp                  
-		DiskDirectory.hpp                  
-		DiskFile.cpp                       
-		DiskFile.hpp                       
-		FileSystem.cpp                     
-		FileSystem.hpp                     
-		Flags.hpp                          
-		GlobalSettings.cpp                 
-		GlobalSettings.hpp                 
-		glsl_math.hpp                      
-		GZipCodec.cpp                      
-		GZipCodec.hpp                      
-		half.hpp                           
-		Image.cpp                          
-		Image.hpp                          
-		ImageTools.hpp                     
-		IMutex.hpp                         
-		Interpolator.hpp                   
-		KeyValues.cpp                      
-		KeyValues.hpp                      
-		LinearInterpolator.hpp             
-		link_config.hpp                    
-		LoadWriterManager.cpp              
-		LoadWriterManager.hpp              
-		Log.cpp                            
-		Log.hpp                            
-		math_utils.cpp                     
-		math_utils.hpp                     
-		Matrix2.hpp                        
-		Matrix3.hpp                        
-		Matrix4.hpp                        
-		MD5CheckSum.cpp                    
-		MD5CheckSum.hpp                    
-		MemoryDirectory.cpp                
-		MemoryDirectory.hpp                
-		MemoryFile.cpp                     
-		MemoryFile.hpp                     
-		MersenneTwister.hpp                
-		MurmurHash3.cpp                    
-		MurmurHash3.hpp                    
-		Object.cpp                         
-		Object.hpp                         
-		OpenGLDefs.hpp                     
-		pimpl.cpp                          
-		Plane.cpp                          
-		Plane.hpp                          
-		Quaternion.hpp                     
-		Random.cpp                         
-		Random.hpp                         
-		Ray.hpp                            
-		Rect.hpp                           
-		ResourceDatabase.cpp               
-		ResourceDatabase.hpp               
-		ResourceLoadWriter.hpp             
-		Say.cpp                            
-		Say.hpp                            
-		ScopedMutex.hpp                    
-		SignalSlot.hpp                     
-		SignalSlotX.hpp                    
-		Sphere.hpp                         
-		std_types.hpp                      
-		String.cpp                         
-		String.hpp                         
-		String_Tables.hpp                  
-		TextStream.cpp                     
-		TextStream.hpp                     
-		Time.cpp                           
-		Time.hpp                           
-		Transform.cpp                      
-		Transform.hpp                      
-		TypeInfo.hpp                       
-		UUID.cpp                           
-		UUID.hpp                           
-		Vector2.hpp                        
-		Vector3.hpp                        
-		Vector4.hpp                        
-		VirtualDirectory.cpp               
-		VirtualDirectory.hpp               
-		VirtualFile.cpp                    
-		VirtualFile.hpp                    
-		VisualizationLibrary.hpp           
-		vlnamespace.hpp                    
-		ZippedDirectory.cpp                
-		ZippedDirectory.hpp                
-		ZippedFile.cpp                     
-		ZippedFile.hpp          
+		#plugins                            
+		RenderCore/AABB.cpp                           
+		RenderCore/AABB.hpp                           
+		RenderCore/Buffer.hpp                         
+		RenderCore/BufferedStream.hpp                 
+		RenderCore/CatmullRomInterpolator.hpp         
+		RenderCore/checks.hpp                         
+		RenderCore/Collection.hpp                     
+		RenderCore/Colors.hpp                         
+		RenderCore/config.hpp.in    
+		RenderCore/config.hpp                  
+		RenderCore/CRC32CheckSum.hpp                  
+		#DiskDirectory.cpp                  
+		#DiskDirectory.hpp                  
+		#DiskFile.cpp                       
+		#DiskFile.hpp                       
+		#FileSystem.cpp                     
+		#FileSystem.hpp                     
+		RenderCore/Flags.hpp                          
+		RenderCore/GlobalSettings.cpp                 
+		RenderCore/GlobalSettings.hpp                 
+		RenderCore/glsl_math.hpp                      
+		#GZipCodec.cpp                      
+		#GZipCodec.hpp                      
+		RenderCore/half.hpp                           
+		#Image.cpp                          
+		#Image.hpp                          
+		#ImageTools.hpp                     
+		RenderCore/IMutex.hpp                         
+		RenderCore/Interpolator.hpp                   
+		RenderCore/KeyValues.cpp                      
+		RenderCore/KeyValues.hpp                      
+		RenderCore/LinearInterpolator.hpp             
+		RenderCore/link_config.hpp                    
+		#LoadWriterManager.cpp              
+		#LoadWriterManager.hpp              
+		#Log.cpp                            
+		#Log.hpp                            
+		RenderCore/math_utils.cpp                     
+		RenderCore/math_utils.hpp                     
+		RenderCore/Matrix2.hpp                        
+		RenderCore/Matrix3.hpp                        
+		RenderCore/Matrix4.hpp                        
+		RenderCore/MD5CheckSum.cpp                    
+		RenderCore/MD5CheckSum.hpp              
+		RenderCore/MersenneTwister.hpp                
+		RenderCore/MurmurHash3.cpp                    
+		RenderCore/MurmurHash3.hpp                    
+		RenderCore/Object.cpp                         
+		RenderCore/Object.hpp                         
+		RenderCore/OpenGLDefs.hpp                     
+		#RenderCore/pimpl.cpp                          
+		RenderCore/Plane.cpp                          
+		RenderCore/Plane.hpp                          
+		RenderCore/Quaternion.hpp                     
+		RenderCore/Random.cpp                         
+		RenderCore/Random.hpp                         
+		RenderCore/Ray.hpp                            
+		RenderCore/Rect.hpp                           
+		RenderCore/ResourceDatabase.cpp               
+		RenderCore/ResourceDatabase.hpp               
+		RenderCore/ResourceLoadWriter.hpp                        
+		RenderCore/ScopedMutex.hpp                    
+		RenderCore/SignalSlot.hpp                     
+		RenderCore/SignalSlotX.hpp                    
+		RenderCore/Sphere.hpp                         
+		RenderCore/std_types.hpp                          
+		RenderCore/Time.cpp                           
+		RenderCore/Time.hpp                           
+		RenderCore/Transform.cpp                      
+		RenderCore/Transform.hpp                      
+		RenderCore/TypeInfo.hpp                       
+		RenderCore/UUID.cpp                           
+		RenderCore/UUID.hpp                           
+		RenderCore/Vector2.hpp                        
+		RenderCore/Vector3.hpp                        
+		RenderCore/Vector4.hpp                               
+		RenderCore/vlnamespace.hpp                    
+		RenderCore/md5.c
+		RenderCore/md5.h
     	)
 fips_end_lib() 
 
