--- a/fips.yml
+++ b/fips.yml
@@ -23,9 +23,9 @@
 #       TARGET-NAME:
 #           cwd:    WORKING DIRECTORY FOR 'fips run target'
 #       ...
-#imports:
-#    oryol:
-#        git: https://github.com/floooh/oryol.git
+imports:
+     oryol:
+         git: https://github.com/floooh/oryol.git
 exports: 
     modules :
         code/src/GameModule
