Add Export Module

--- a/fips.yml
+++ b/fips.yml
@@ -27,5 +27,5 @@ imports:
      oryol:
          git: https://github.com/floooh/oryol.git
 exports: 
-    modules :
-        code/src/GameModule
+    modules:
+        RenderCore:   RenderCore
