--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,16 @@
 #
 # project: fips-RenderCore
-# 
+#
 if (NOT FIPS_IMPORT)
-    cmake_minimum_required(VERSION 2.8)
-    get_filename_component(FIPS_ROOT_DIR "../fips" ABSOLUTE)
-    include("${FIPS_ROOT_DIR}/cmake/fips.cmake")
-    fips_setup()
+    cmake_minimum_required(VERSION 3.0)
+	get_filename_component(FIPS_ROOT_DIR "../fips" ABSOLUTE)
+	include("${FIPS_ROOT_DIR}/cmake/fips.cmake")
+	fips_setup()
     fips_project(fips-RenderCore)
 endif()
 
-fips_begin_lib(RenderGraphic)
+
+fips_begin_lib(RenderCore)
 	fips_vs_disable_warnings(4312)
 	#fips_dir(RenderCore)
 	fips_files(
@@ -94,8 +95,6 @@ fips_begin_lib(RenderGraphic)
 		RenderCore/md5.c
 		RenderCore/md5.h
     	)
-
-	fips_deps(Gfx Assets)
 fips_end_lib() 
 
 
