Add Searching Folder

--- a/fips.yml
+++ b/fips.yml
@@ -27,5 +27,7 @@ imports:
      oryol:
          git: https://github.com/floooh/oryol.git
 exports: 
+    header-dirs:
+        - RenderCore/
     modules:
         RenderCore:   .
