--- a/fips.yml
+++ b/fips.yml
@@ -26,8 +26,9 @@
 imports:
      oryol:
          git: https://github.com/floooh/oryol.git
+
 exports: 
     header-dirs:
-        - RenderCore/.
+        - RenderCore
     modules:
-        RenderCore:   .
+        RenderCore:   RenderCore
