--- a/fips.yml
+++ b/fips.yml
@@ -26,7 +26,8 @@
 imports:
      oryol:
          git: https://github.com/floooh/oryol.git
-
+     fips-glad:
+        git: https://github.com/shajieChen/fips-glad.git
 exports: 
     header-dirs:
         - RenderCore
